[metadata]
name = zeit-online
version = 1.0.0
author = Marten Walk
author_email = kkx@protonmail.com
License = MIT
description = A Python Wrapper for the Zeit Online Content API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://skriptum.github.io/zeit/
project_urls =
    Bug Tracker = https://github.com/skriptum/zeit/issues
    Documentation = https://github.com/skriptum/zeit/docs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    requests >= 2.25.1
    pandas >= 1.2.3
packages = find:
python_requires = >=3.6
