[metadata]
name = zeit-online
version = 0.0.1
author = Marten Walk
author_email = kkx@protonmail.com
description = A Python Wrapper for the Zeit Online Content API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/skriptum/zeit
project_urls =
    Bug Tracker = https://github.com/skriptum/zeit/issues
    Documentation = https://github.com/skriptum/zeit/docs
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6